Bug 1848196 - Make the default tab index of `<embed>` which loaded a document to `0` r=NeilDeakin,dom-core,farre

Like `<object>`, `<embed>` can load another document.  However,
`HTMLEmbedElement` does not override `Element::TabIndexDefault()` and that
causes `HTMLEmbedElement::IsHTMLFocusable()` set the tab index to `-1` so
it's skipped during the tab navigation.

Differential Revision: https://phabricator.services.mozilla.com/D186287